--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\ProductImage\" />
+  </ItemGroup>
+
 </Project>
